package hogwartSim.general;

/**
 * Interface associated with usage of items
 */
public interface IItem {
    public void getUsed();
}
